--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,17 +11,17 @@
     <ImageView
         android:id="@+id/big_logo"
         android:layout_width="309dp"
-        android:layout_height="105dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/login_title"
+        android:layout_height="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.04000002"
         app:srcCompat="@drawable/mrgs_logo_l" />
 
     <TextView
-        android:id="@+id/login_title"
+        android:id="@+id/regsiter_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
@@ -30,90 +30,101 @@
         android:textAlignment="center"
         android:textColor="#081A75"
         android:textSize="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/stud_id"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/big_logo" />
+        app:layout_constraintTop_toBottomOf="@+id/big_logo"
+        app:layout_constraintVertical_bias="0.37" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="0dp"
+        android:id="@+id/r_email"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="50dp"
         android:ems="10"
         android:fontFamily="sans-serif"
-        android:hint="Enter your Email Addres"
+        android:hint="School Email Address"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txt_lemail"
-        app:layout_constraintTop_toBottomOf="@+id/login_title" />
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stud_id"
+        app:layout_constraintVertical_bias="0.060000002" />
+
+    <EditText
+        android:id="@+id/stud_id"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:fontFamily="sans-serif"
+        android:hint="Student ID number"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.37"
+        tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="155dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="156dp"
-        android:layout_marginBottom="300dp"
         android:background="@drawable/round_btn"
-        android:text="LOGIN"
+        android:text="REGISTER"
         android:textColor="#081A75"
         android:textSize="20sp"
         app:iconTint="#BB8800"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/r_password"
+        app:layout_constraintVertical_bias="0.060000002" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="242dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="95dp"
+        android:id="@+id/r_password"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
         android:ems="10"
         android:fontFamily="sans-serif"
-        android:hint="Enter Your Password"
+        android:hint="Password"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txt_lpassword"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/r_email"
+        app:layout_constraintVertical_bias="0.060000002" />
 
     <TextView
-        android:id="@+id/txt_lpassword"
+        android:id="@+id/log_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="16dp"
         android:fontFamily="@font/modern_sans_font"
-        android:text="Password"
+        android:text="Already Registered? Login Here"
         android:textAlignment="center"
         android:textColor="#081A75"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_lemail" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_register"
+        app:layout_constraintVertical_bias="0.16000003" />
 
-    <TextView
-        android:id="@+id/txt_lemail"
+    <ProgressBar
+        android:id="@+id/r_progressbar"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="170dp"
-        android:fontFamily="@font/modern_sans_font"
-        android:text="Email"
-        android:textAlignment="center"
-        android:textColor="#081A75"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/big_logo" />
+        app:layout_constraintTop_toBottomOf="@+id/log_in"
+        app:layout_constraintVertical_bias="0.7" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
