--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,52 +4,47 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:title="Home"
-            android:icon="@drawable/home_icon" />
+            android:icon="@drawable/home_icon"
+            android:title="Home" />
         <item
             android:id="@+id/nav_menu"
-            android:title="Menu"
-            android:icon="@drawable/menu_icon" />
+            android:icon="@drawable/menu_icon"
+            android:title="Menu" />
         <item
             android:id="@+id/nav_ordernow"
-            android:title="Order Now"
-            android:icon="@drawable/ordernow_icon" />
+            android:icon="@drawable/ordernow_icon"
+            android:title="Order Now" />
         <item
             android:id="@+id/nav_pastorder"
-            android:title="Past Orders"
-            android:icon="@drawable/pastorder_icon" />
+            android:icon="@drawable/pastorder_icon"
+            android:title="Past Orders" />
 
     </group>
 
-    <group android:checkableBehavior="single">
-        <item android:title="Settings">
-            <menu>
-                <item
-                    android:id="@+id/nav_login"
-                    android:title="Login"
-                    android:icon="@drawable/login_icon"/>
+
+    <item android:title="Settings">
+        <menu>
+            <group android:checkableBehavior="single">
 
                 <item
                     android:id="@+id/nav_logout"
-                    android:title="Logout"
-                    android:icon="@drawable/logout_icon"/>
+                    android:icon="@drawable/logout_icon"
+                    android:title="Logout" />
 
                 <item
                     android:id="@+id/nav_aboutus"
-                    android:title="About Us"
-                    android:icon="@drawable/about_icon" />
+                    android:icon="@drawable/about_icon"
+                    android:title="About Us" />
 
                 <item
                     android:id="@+id/nav_contact"
-                    android:title="Contact Us"
-                    android:icon="@drawable/contact_icon" />
-            </menu>
+                    android:icon="@drawable/contact_icon"
+                    android:title="Contact Us" />
+            </group>
+        </menu>
 
 
-        </item>
-
-
-    </group>
+    </item>
 
 
 </menu>
