Order being updated to cart when clicked on 'Order Now'

--- a/app/src/main/res/layout/activity_order_page.xml
+++ b/app/src/main/res/layout/activity_order_page.xml
@@ -5,20 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".OrderPage">
+    tools:context=".OrderPage"
+    android:background="@drawable/appbackground">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#00FFFFFF"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        />
+        android:layout_height="20dp"
+        android:orientation="vertical"></LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/mainfood_sample"/>
+        android:layout_height="640dp"
+        tools:listitem="@layout/mainfood_sample" />
 </LinearLayout>
