--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -142,14 +142,21 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/insertbtn"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/round_btn"
-            android:text="Order now"
-            android:textColor="#081A75" />
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/insertbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/round_btn"
+                android:text="Order now"
+                android:textColor="#081A75" />
+        </LinearLayout>
 
     </LinearLayout>
 </LinearLayout>
