--- a/app/src/main/res/layout/activity_order_page.xml
+++ b/app/src/main/res/layout/activity_order_page.xml
@@ -17,6 +17,43 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="640dp"
-        tools:listitem="@layout/mainfood_sample" />
+        android:layout_height="600dp"
+        tools:listitem="@layout/mainfood_sample" >
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="fill_horizontal|top"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="25dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/logout"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="bottom"
+            app:srcCompat="@drawable/logout" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/modern_sans_font"
+            android:text="Logout"
+            android:textColor="#081A75"
+            android:textSize="18dp" />
+    </LinearLayout>
+
 </LinearLayout>
