detail fragment, price & quantity changable

--- a/app/src/main/res/layout/fragment_food_desrciption.xml
+++ b/app/src/main/res/layout/fragment_food_desrciption.xml
@@ -70,7 +70,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1"
-                    android:id="@+id/quantitydetailnumber"
+                    android:id="@+id/fooddetailquantity"
                     android:textSize="18sp"
                     android:textColor="@color/black"
                     android:layout_marginLeft="15dp"
@@ -100,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/linear"
-                android:id="@+id/orderprice"
+                android:id="@+id/orderINFO"
                 android:textStyle="italic"
                 android:textColor="@color/black"
                 android:textSize="18sp"
@@ -113,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:text="Add to Cart"
                 android:textColor="#081A75"
-                android:layout_below="@id/orderprice"
+                android:layout_below="@id/orderINFO"
                 android:id="@+id/addtocartorderdetail"
                 android:background="@drawable/round_btn"
                 android:layout_centerHorizontal="true"
