cart fragment working fine

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,6 +45,10 @@
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="School Email Address"
+        android:padding="15dp"
+        android:background="@drawable/textboxoutline"
+        android:textColorHint="#3b4475"
+        android:textColor="#081A75"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,6 +80,10 @@
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Enter Your Password"
+        android:textColorHint="#3b4475"
+        android:textColor="#081A75"
+        android:padding="15dp"
+        android:background="@drawable/textboxoutline"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,6 +101,7 @@
         android:textAlignment="center"
         android:textColor="#081A75"
         android:textSize="15dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
