--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -44,6 +44,10 @@
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="School Email Address"
+        android:padding="15dp"
+        android:background="@drawable/textboxoutline"
+        android:textColorHint="#3b4475"
+        android:textColor="#081A75"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +63,10 @@
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Student ID number"
+        android:padding="15dp"
+        android:background="@drawable/textboxoutline"
+        android:textColorHint="#3b4475"
+        android:textColor="#081A75"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +81,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/round_btn"
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp"
         android:text="REGISTER"
         android:textColor="#081A75"
         android:textSize="20sp"
@@ -90,6 +100,10 @@
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Password"
+        android:padding="15dp"
+        android:background="@drawable/textboxoutline"
+        android:textColorHint="#3b4475"
+        android:textColor="#081A75"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
