--- a/app/src/main/res/navigation/navgraph.xml
+++ b/app/src/main/res/navigation/navgraph.xml
@@ -47,6 +47,9 @@
             android:name="id"
             app:argType="string"
             android:defaultValue="null" />
+        <argument
+            android:name="quantity"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/cartFragment"
