--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,7 +62,7 @@
         android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_btn"
+        android:background="@drawable/yellow_btn"
         android:text="LOGIN"
         android:textColor="#081A75"
         android:textSize="20sp"
