--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -80,7 +80,7 @@
         android:id="@+id/btn_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_btn"
+        android:background="@drawable/yellow_btn"
         android:paddingRight="20dp"
         android:paddingLeft="20dp"
         android:text="REGISTER"
