--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -27,7 +27,7 @@
         android:id="@+id/btn_verify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_btn"
+        android:background="@drawable/yellow_btn"
         android:text="Verify now"
         android:textColor="#081A75"
         android:textSize="20dp"
@@ -43,7 +43,7 @@
         android:id="@+id/btn_logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_btn"
+        android:background="@drawable/yellow_btn"
         android:text="Logout"
         android:textColor="#081A75"
         android:textSize="20dp"
