--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -7,13 +7,31 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recViewAll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="590dp"
 
-        android:id="@+id/recViewAll"/>
+        android:layout_marginTop="70dp">
 
+    </androidx.recyclerview.widget.RecyclerView>
 
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="685dp">
+        <Button
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Confirm"
+            android:background="@drawable/blue_btn"/>
+    </RelativeLayout>
 
 
 </RelativeLayout>
+
+
+
+
+
