--- a/app/src/main/res/layout/fragment_foodlistfragment.xml
+++ b/app/src/main/res/layout/fragment_foodlistfragment.xml
@@ -7,35 +7,28 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recViewAll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_marginTop="70dp"
 
-        android:id="@+id/recViewAll"/>
+        android:layout_height="590dp">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="30dp"
-        android:id="@+id/fab"
-        android:src="@drawable/shopcart"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="65dp"
-        android:layout_marginEnd="53dp"
-        android:text=""
-        android:elevation="16dp"
-        android:id="@+id/quantityOnfAB"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-
-        android:textSize="20sp"/>
+        android:gravity="center"
+        android:layout_marginTop="685dp">
+        <ImageButton
+            android:id="@+id/fab"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/shopcart"/>
+    </RelativeLayout>
 
 
 </RelativeLayout>
