--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -24,6 +24,13 @@
         android:textSize="30dp"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="10dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:orientation="vertical"
+        android:background="@drawable/nav_header_blueline"></LinearLayout>
+
+
 
 
 </LinearLayout>
