--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
@@ -8,16 +7,12 @@
             android:title="Home" />
         <item
             android:id="@+id/nav_menu"
-            android:icon="@drawable/menu_icon"
+            android:icon="@drawable/nav_menu_icon"
             android:title="Menu" />
         <item
             android:id="@+id/nav_ordernow"
             android:icon="@drawable/ordernow_icon"
             android:title="Order Now" />
-        <item
-            android:id="@+id/nav_pastorder"
-            android:icon="@drawable/pastorder_icon"
-            android:title="Past Orders" />
 
     </group>
 
