--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -21,7 +21,7 @@
         android:gravity="center"
         android:layout_marginTop="685dp">
         <Button
-            android:id="@+id/fab"
+            android:id="@+id/confirm_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Confirm"
