--- a/app/src/main/res/layout/activity_about_page.xml
+++ b/app/src/main/res/layout/activity_about_page.xml
@@ -4,6 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AboutPage">
+    tools:context=".AboutPage"
+    android:background="@drawable/appbackground">
+
+
+    <!--<TextView
+        android:id="@+id/mrgs_ts_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/modern_sans_font"
+        android:text="MRGS Tuckshop Menu"
+        android:textColor="#081A75"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/classics"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="110dp"/> -->
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
