--- a/app/src/main/res/layout/foodliststyle.xml
+++ b/app/src/main/res/layout/foodliststyle.xml
@@ -30,9 +30,9 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/foodname"
                 android:text="Foodname"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textColor="#081a75"
+                android:fontFamily="@font/modern_sans_font"
                 android:layout_toRightOf="@id/foodimage"
                 android:layout_marginLeft="15dp"/>
 
@@ -46,7 +46,9 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="8dp"
-                android:text="loremloremloremloremlorem"/>
+                android:text="loremloremloremloremlorem"
+                android:textColor="#081a75"
+                />
 
 
 
