--- a/app/src/main/res/layout/activity_contact_page.xml
+++ b/app/src/main/res/layout/activity_contact_page.xml
@@ -88,7 +88,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/map_text"
-                    app:srcCompat="@drawable/butterchknrice" />
+                    app:srcCompat="@drawable/tuckshop_map" />
 
                 <TextView
                     android:id="@+id/contact_statement"
