--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -29,7 +29,7 @@
         android:text="EMAIL NOT VERIFIED!"
         android:textAlignment="center"
         android:textColor="#d10202"
-        android:textSize="25dp"
+        android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:layout_marginTop="10dp"
         android:fontFamily="@font/modern_sans_font"
         android:lines="2"
-        android:text="To use the app, \n please Verify your Email!"
+        android:text="To use the app please \nVerify your Email!"
         android:textAlignment="center"
         android:textColor="#d10202"
         android:textSize="20sp"
@@ -53,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/verifymsg"
-        app:layout_constraintVertical_bias="0.04000002" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btn_verify"
@@ -77,7 +77,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/modern_sans_font"
         android:lines="2"
-        android:text="Note: Once the email has been verified, \nplease Re-Login"
+        android:text="Note: Once the email has been \nverified, please Re-Login"
         android:textColor="#d10202"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -92,6 +92,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/yellow_btn"
         android:onClick="logout1"
+        android:paddingHorizontal="30dp"
         android:text="Logout"
         android:textColor="#081A75"
         android:textSize="15dp"
@@ -100,6 +101,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/verifynote"
-        app:layout_constraintVertical_bias="0.18" />
+        app:layout_constraintVertical_bias="0.07999998" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
